--- a/MVC/appsettings.json
+++ b/MVC/appsettings.json
@@ -1,4 +1,8 @@
 ﻿{
+  "ConnectionStrings": {
+    "MainConnection": "Server=(localdb)\\MSSQLLocalDB;Database=master;Trusted_connection=True;MultipleActiveResultSets=ture;"
+  },
+
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
